--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <div class="row">
   </div>
 </div>
-<div class="dropdown">
+<div class="dropdown" id="search-dropdown">
   <button onclick="myFunction()" class="dropbtn">Dropdown</button>
   <div id="myDropdown" class="dropdown-content">
     <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
