--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   </div>
 </div>
 <div class="dropdown" id="search-dropdown">
-  <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+  <button onclick="myFunction()" class="btn btn-secondary dropdown-toggle">Dropdown</button>
   <div id="myDropdown" class="dropdown-content">
     <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
   </div>
