--- a/extras/feed.html
+++ b/extras/feed.html
@@ -87,12 +87,10 @@
   <div class="row">
   </div>
 </div>
-<div class="accesibility-menu">
-  <div class="dropdown">
-    <button onclick="myFunction()" class="dropbtn">Dropdown</button>
-    <div id="myDropdown" class="dropdown-content">
-      <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
-    </div>
+<div class="dropdown" id="search-dropdown">
+  <button onclick="myFunction()" id="search-dropdown-button" class="btn btn-secondary dropdown-toggle">Dropdown</button>
+  <div id="myDropdown" class="dropdown-content">
+    <input type="text" placeholder="Search.." id="myInput" onkeyup="filterFunction()">
   </div>
 </div>
 <button onclick="accesibility();">
