--- a/games/bored.html
+++ b/games/bored.html
@@ -99,10 +99,11 @@
         </br>
         <ul>
           <li><a href="dino.html">Dinosaur Game</a></li>
-          <li><a href="2048/2048.html">Hacked 2048</a></li>
+          <li><a href="image_2048/2048.html">Hacked 2048</a></li>
           <li><a href="cookieclicker/cookieclicker.html">Cookie Clicker</a></li>
           <li><a href="aww.html">Random Cute Stuff</a></li>
           <li><a href="markov.html">Talk to a robot</a></li>
+          <li><a href="https://www.google.com/search?igu=1&q=minesweeper">Minesweeper</a></li>
         </ul>
   </div>
   
