--- a/sets/flashcard.html
+++ b/sets/flashcard.html
@@ -88,7 +88,7 @@
   </span>
   <div class="flashcard">
     <div class="flashcard-text">
-      Food
+      Click to Start
     </div>
   </div>
 <div>
