--- a/sets/flashcard.html
+++ b/sets/flashcard.html
@@ -143,7 +143,7 @@
   </div>
 </section>
 <div class="container">
-  <div class="row">s
+  <div class="row">
   </div>
 </div>
 <div class="dropdown" id="search-dropdown">
