--- a/sets/flashcard.html
+++ b/sets/flashcard.html
@@ -87,7 +87,7 @@
     <br>
   </span>
   <div class="flashcard">
-    <div class="flashcard-text">
+    <div class="flashcard-text" style="display:table">
       Click to Start
     </div>
   </div>
@@ -165,7 +165,7 @@
   console.log(name)
   GetSetCards(name, cards => {
   var card = 0
-  var side = 0
+  var side = 1
   $( ".flashcard" ).click(function() {
     if (side === 0) {
       side = 1;
@@ -191,7 +191,7 @@
       $(".flashcard").removeClass("offleft");
       }, 300)
       card = card - 1;
-      side = 0;
+      side = 1;
     }
     $('.flashcard-text').text(cards[card][side])
   });
@@ -202,7 +202,7 @@
       $(".flashcard").removeClass("offright");
       }, 300)
       card = card + 1;
-      side = 0;
+      side = 1;
     }
     $('.flashcard-text').text(cards[card][side])
   });
@@ -214,7 +214,7 @@
       $(".flashcard").removeClass("offleft");
       }, 300)
         card = card - 1;
-        side = 0;
+        side = 1;
       }
       $('.flashcard-text').text(cards[card][side])
     }
@@ -227,7 +227,7 @@
       $(".flashcard").removeClass("offright");
       }, 300)
         card = card + 1;
-        side = 0;
+        side = 1;
       }
       $('.flashcard-text').text(cards[card][side])
     }
