--- a/sets/flashcard.html
+++ b/sets/flashcard.html
@@ -175,8 +175,8 @@
       currentIndex -= 1;
   
       // And swap it with the current element.
-      temporaryValue = array[currentIndex];
-      cards[currentIndex] = array[randomIndex];
+      temporaryValue = cards[currentIndex];
+      cards[currentIndex] = cards[randomIndex];
       cards[randomIndex] = temporaryValue;
     }
 
