--- a/sets/flashcard.html
+++ b/sets/flashcard.html
@@ -87,7 +87,7 @@
     <br>
   </span>
   <div class="flashcard">
-    <div class="flashcard-text" style="display:table">
+    <div class="flashcard-text">
       Click to Start
     </div>
   </div>
