Fix flashcard css

--- a/sets/flashcard.html
+++ b/sets/flashcard.html
@@ -104,9 +104,7 @@
       Click to Start
     </div>
   </div>
-  <div class="flashcard-count">
-    1/16
-  </div>
+  <div class="flashcard-count"></div>
 <div>
 <footer class="container-fluid text-center" style="margin-bottom:0;">
   <i class="fas fa-caret-left"></i>
@@ -177,14 +175,11 @@
 
     var currentIndex = cards.length, temporaryValue, randomIndex;
   
-    // While there remain elements to shuffle...
     while (0 !== currentIndex) {
   
-      // Pick a remaining element...
       randomIndex = Math.floor(Math.random() * currentIndex);
       currentIndex -= 1;
   
-      // And swap it with the current element.
       temporaryValue = cards[currentIndex];
       cards[currentIndex] = cards[randomIndex];
       cards[randomIndex] = temporaryValue;
@@ -193,6 +188,8 @@
     var card = 0
     var side = 1
     $('.flashcard-count').text((card + 1).toString() + "/" + cards.length);
+
+    //When flashcard/spacebar clicked flip
     $( ".flashcard" ).click(function() {
       if (side === 0) {
         side = 1;
@@ -202,67 +199,18 @@
       $('.flashcard-text').css("color","white");
       $('.flashcard-text').text("...");
       $(".flashcard").addClass("flashcard-collapsed");
+
       setTimeout(function () {
         $(".flashcard").removeClass("flashcard-collapsed");
       }, 300);
+
       setTimeout(function (){
           $('.flashcard-text').css("color","black");
           $('.flashcard-text').text(cards[card][side]);
           window.scrollTo(0,-100)
       }, 400)
     })
-    $( ".fa-caret-left" ).click(function() {
-      if (card != 0) {
-      $(".flashcard").addClass("offleft");
-        setTimeout(function (){
-        $(".flashcard").removeClass("offleft");
-        }, 300)
-        card = card - 1;
-        side = 0;
-      }
-      $('.flashcard-text').text(cards[card][side])
-      $('.flashcard-count').text((card + 1).toString() + "/" + cards.length);
-    });
-    $( ".fa-caret-right" ).click(function() {
-      if (card != cards.length - 1) {
-      $(".flashcard").addClass("offright");
-        setTimeout(function (){
-        $(".flashcard").removeClass("offright");
-        }, 300)
-        card = card + 1;
-        side = 0;
-      }
-      $('.flashcard-text').text(cards[card][side])
-      $('.flashcard-count').text((card + 1).toString() + "/" + cards.length);
-    });
-    $('body').keydown(function (e){
-      if(e.keyCode === 37){
-        if (card != 0) {
-      $(".flashcard").addClass("offleft");
-        setTimeout(function (){
-        $(".flashcard").removeClass("offleft");
-        }, 300)
-          card = card - 1;
-          side = 0;
-        }
-        $('.flashcard-text').text(cards[card][side])
-        $('.flashcard-count').text((card + 1).toString() + "/" + cards.length);
-      }
-    })
-    $('body').keydown(function (e){
-      if(e.keyCode === 39){
-        if (card != cards.length - 1) {
-      $(".flashcard").addClass("offright");
-        setTimeout(function (){
-        $(".flashcard").removeClass("offright");
-        }, 300)
-          card = card + 1;
-          side = 0;
-        }
-        $('.flashcard-text').text(cards[card][side])
-        $('.flashcard-count').text((card + 1).toString() + "/" + cards.length);
-      }
-    })
+
     $('body').keydown(function (e){
       if(e.keyCode === 32){
         if (side === 0) {
@@ -273,14 +221,77 @@
       $('.flashcard-text').css("color","white");
       $('.flashcard-text').text("...");
       $(".flashcard").addClass("flashcard-collapsed");
+
       setTimeout(function () {
         $(".flashcard").removeClass("flashcard-collapsed");
       }, 300);
+
       setTimeout(function (){
           $('.flashcard-text').css("color","black");
           $('.flashcard-text').text(cards[card][side]);
           window.scrollTo(0,-100)
       }, 400)
+      }
+    })
+
+    //When left button/left arrow clicked go one card forward
+    $( ".fa-caret-left" ).click(function() {
+      if (card != 0) {
+        $(".flashcard").addClass("offleft");
+          setTimeout(function (){
+            $(".flashcard").removeClass("offleft");
+          }, 300)
+        card = card - 1;
+        side = 0;
+      }
+
+      $('.flashcard-text').text(cards[card][side])
+      $('.flashcard-count').text((card + 1).toString() + "/" + cards.length);
+    });
+
+    $('body').keydown(function (e){
+      if(e.keyCode === 37){
+        if (card != 0) {
+          $(".flashcard").addClass("offleft");
+          setTimeout(function (){
+            $(".flashcard").removeClass("offleft");
+          }, 300)
+          card = card - 1;
+          side = 0;
+        }
+
+        $('.flashcard-text').text(cards[card][side])
+        $('.flashcard-count').text((card + 1).toString() + "/" + cards.length);
+      }
+    })
+
+    //When right button/right arrow clicked go one card back
+    $( ".fa-caret-right" ).click(function() {
+      if (card != cards.length - 1) {
+      $(".flashcard").addClass("offright");
+        setTimeout(function (){
+          $(".flashcard").removeClass("offright");
+        }, 300)
+        card = card + 1;
+        side = 0;
+      }
+      $('.flashcard-text').text(cards[card][side])
+      $('.flashcard-count').text((card + 1).toString() + "/" + cards.length);
+    });
+
+    $('body').keydown(function (e){
+      if(e.keyCode === 39){
+        if (card != cards.length - 1) {
+          $(".flashcard").addClass("offright");
+          setTimeout(function (){
+            $(".flashcard").removeClass("offright");
+          }, 300)
+          card = card + 1;
+          side = 0;
+        }
+
+        $('.flashcard-text').text(cards[card][side])
+        $('.flashcard-count').text((card + 1).toString() + "/" + cards.length);
       }
     })
   })
