--- a/sets/flashcard.html
+++ b/sets/flashcard.html
@@ -161,7 +161,7 @@
   </div>
 </div>
 
-<i class="fas fa-cog fa-3x accesibility-button"></i>  
+<i onclick="rotation += 5;$(this).rotate(rotation);" class="fas fa-cog fa-3x accesibility-button"></i>  
 
 <script>
   var name = window.location.href.toString().substring(44);
